LU-2041 osd: inconsistent OI cache

osd_it_ea_rec() can put inconsistent information in OI cache
if osd_ea_fid_get() failed, then we might get wrong ino and load
wrong inode in later call. This may cause data corruption or
other unpredictable failure.

This patch also fixed a bug in osd_iget_verify().

Signed-off-by: Wang Di <di.wang@whamcloud.com>
Signed-off-by: Liang Zhen <liang@whamcloud.com>
Change-Id: I219f74d40250f74d5111c236728ce02d549fb7e4